--- a/stylus/components/timer.styl
+++ b/stylus/components/timer.styl
@@ -8,6 +8,11 @@
   border-radius 4px
   display block
   padding 15px
+  input
+    background #ffffff
+    border-radius 3px
+    border 2px solid #454545
+    color #454545
 
 .timer__title
   font-size 25px
