Current timer total time is accurate now

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -143,5 +143,8 @@ html(ng-app="myApp")
     script(src='js/controllers/timer.js')
     script(src='js/controllers/timers.js')
     script(src='js/controllers/projects.js')
+    script(src='js/directives/currentTimer.js')
+    script(src='js/directives/timer.js')
+    script(src='js/directives/project.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
