--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -17,3 +17,4 @@
 @import './components/project.styl'
 @import './components/tag.styl'
 @import './components/decipher-tags.styl'
+@import './components/pagination.styl'
