--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -32,6 +32,8 @@
         i.fa.fa-times
         | Remove
 
+  pagination(total-items="totalItems", page="currentPage", items-per-page="pageSize")
+
     //- h6(ng-bind="timer.date")
     //- .clearfix
     //- .col-md-2
