--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -32,7 +32,7 @@
         i.fa.fa-times
         | Remove
 
-  pagination(total-items="totalItems", page="currentPage", items-per-page="pageSize")
+  pagination(total-items="totalItems", page="currentPage", items-per-page="pageSize", direction-links="false")
 
     //- h6(ng-bind="timer.date")
     //- .clearfix
