Frontend adds todays date

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -95,9 +95,9 @@ html(ng-app="myApp")
                 //-   i.fa.fa-clock-o
                 //-   label(for="currentTime").sr-only Current Time
                 //-   input(type="time", id="currentTime", placeholder="Current Time", ng-model="timer.time").form-control
-                //- .form-group.form-icon.timer__advanced__date
-                //-   i.fa.fa-calendar-o
-                //-   input(type="text", datepicker-popup="{{format}}", ng-model="timer.date", is-open="opened", min="minDate", max="'2015-06-22'", datepicker-options="dateOptions", date-disabled="disabled(date, mode)", close-text="Close")
+                .form-group.form-icon.timer__advanced__date
+                  i.fa.fa-calendar-o
+                  input(type="text", datepicker-popup="{{format}}", ng-model="timer.date", is-open="opened", min="minDate", max="'2015-06-22'", datepicker-options="dateOptions", date-disabled="disabled(date, mode)", close-text="Close")
                 //-   //- span.input-group-btn
                 //-   //-   button(ng-click="open($event)").btn.btn-default
                 //-   //-     i.glyphicon.glyphicon-calendar
