--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -2,11 +2,15 @@
   //- pre {{currentTimer | json}}
   nav.timers-nav
     .btn(ng-click="getToday()", ng-class="{'is-active': filter === 'today'}") Today
-    .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'week'}") This Week
+    .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'this week'}") This Week
     //- .btn(ng-click="getThisMonth()", ng-class="{'is-active': filter === 'month'}") This Month
     //- .col-md-4
     //-   .btn Start
     //-   .btn End
+
+  div(ng-if="timers.length === 0").timer
+    h1 You have no timers for {{filter}}
+    h3 Start a timer in the toolbar above.
 
   timer(ng-repeat="timer in timers | reverse", timers="timers", ng-dblclick="edit()").timer
     .timer__desc
