--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,7 +47,8 @@ input:focus,textarea:focus{background-color:#233f56}
 .nav li{text-align:center;font-size:25px;padding:50px 0}
 .nav .is-active{background:#41494f}
 .nav i{display:block;font-size:40px}
-.content-wrapper{margin:93px 0 0 170px}
+.content-wrapper{margin:93px 0 0 170px;}
+.content-wrapper.nav-open{margin-top:170px}
 .header-timer{background:#41494f;-webkit-box-shadow:0 10px rgba(54,62,69,0.1);box-shadow:0 10px rgba(54,62,69,0.1);position:fixed;top:0;left:0;right:0;z-index:999;padding-left:170px;}
 .header-timer input{background:#535a5f;width:100%;height:51px;}
 .header-timer input:focus{background:#626b71}
