--- a/stylus/foundation/structure.styl
+++ b/stylus/foundation/structure.styl
@@ -14,3 +14,13 @@ html
 .container
   max-width 880px
   margin 0 auto
+
+.timers
+.projects
+  animation fadeIn .3s
+
+@keyframes fadeIn
+  0%
+    opacity 0
+  100%
+    opacity 1
