--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -36,7 +36,8 @@
         i.fa.fa-times
         | Remove
 
-  pagination(total-items="totalItems", page="currentPage", items-per-page="pageSize", direction-links="false")
+  div(ng-class="{'is-hided': !paginationViewable}")
+    pagination(total-items="totalItems", page="currentPage", items-per-page="pageSize", direction-links="false")
 
     //- h6(ng-bind="timer.date")
     //- .clearfix
