--- a/stylus/foundation/variables.styl
+++ b/stylus/foundation/variables.styl
@@ -3,6 +3,7 @@
 // $mediaRetina = "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
 
 $colorGreyDark = #363e45
+$colorBlack = #2A3035
 $colorWhite = #eeeff0
 
 $colorBlue = #7e9bb8
