--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -18,3 +18,4 @@
 @import './components/tag.styl'
 @import './components/decipher-tags.styl'
 @import './components/pagination.styl'
+@import './components/header.styl'
