--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -23,6 +23,7 @@
 //  Current Timer | ^current ^timer
 //==============================================================================
 .timer__current__basic
+  animation fadeIn .5s
   padding 10px 0px
 
 .timer__current__title
@@ -62,6 +63,7 @@
 //==============================================================================
 .timer__basic
   background #41494f
+  animation fadeIn .5s
   padding 10px 0px
   height 69px
   clearfix()
