--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -4,7 +4,7 @@
     margin-top 170px
 
 .header-timer
-  background #41494f
+  background #363e45
   box-shadow 0px 10px rgba(#363e45, 10%)
   position fixed
   top 0px
@@ -62,7 +62,7 @@
 //  Timer basic | ^timer
 //==============================================================================
 .timer__basic
-  background #41494f
+  background #363e45
   animation fadeIn .5s
   padding 10px 0px
   height 69px
@@ -88,7 +88,7 @@
 //  Timer advanced | ^timer ^nav
 //==============================================================================
 .timer__advanced
-  background #384045
+  background $colorBlack
   clearfix()
   height 71px
   padding 10px 0px
