--- a/stylus/foundation/variables.styl
+++ b/stylus/foundation/variables.styl
@@ -3,6 +3,9 @@
 // $mediaRetina = "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
 
 $colorGreyDark = #363e45
+$colorGreyLight = #b4bac2
+$colorGreyPlain = #eeeff0
+
 $colorBlack = #2A3035
 $colorWhite = #eeeff0
 
