--- a/stylus/components/nav.styl
+++ b/stylus/components/nav.styl
@@ -14,7 +14,7 @@
   margin 0
   font-size 25px
   text-align center
-  height 70px
+  height 69px
   padding-top 15px
 
 .nav
@@ -23,9 +23,8 @@
   a
     text-decoration none
   li
-    text-align center
-    font-size 25px
-    padding 50px 0px
+    font-size 16px
+    padding 15px 10px
     transition background .3s
     &:hover
       background #41494f
@@ -34,7 +33,9 @@
     background #41494f
     &:hover
       background #41494f
-      color #ffffff
   i
-    display block
-    font-size 40px
+    margin-right 5px
+
+.nav-signout
+  position absolute
+  bottom 0px
