--- a/stylus/components/timer.styl
+++ b/stylus/components/timer.styl
@@ -2,12 +2,7 @@
   margin-top 40px
 
 .timer
-  background #ffffff
-  clearfix()
-  margin-bottom 10px
-  border-radius 4px
-  display block
-  padding 15px
+  @extends .element
   input
     background #ffffff
     border-radius 3px
