--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -11,6 +11,7 @@
 @import './foundation/forms.styl'
 @import './foundation/animation.styl'
 
+@import './components/element.styl'
 @import './components/nav.styl'
 @import './components/header-timer.styl'
 @import './components/timer.styl'
