--- a/views/app.jade
+++ b/views/app.jade
@@ -1,3 +1,120 @@
-extends layout
+doctype
+html(ng-app="myApp")
+  head
+    meta(charset='utf8')
+    base(href='/')
+    title Molyneux
+    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='/css/font-awesome.css')
+    link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/main.css')
+    script.
+      var user = '#{userId}'
+    script(type="text/javascript", src="//use.typekit.net/ocs1xrk.js")
+    script(type="text/javascript").
+      try{Typekit.load();}catch(e){}
+    //- script(type="text/javascript").
+    //-   (function() {
+    //-     var config = {
+    //-       kitId: 'ocs1xrk'
+    //-     };
+    //-     var d = false;
+    //-     var tk = document.createElement('script');
+    //-     tk.src = '//use.typekit.net/' + config.kitId + '.js';
+    //-     tk.type = 'text/javascript';
+    //-     tk.async = 'true';
+    //-     tk.onload = tk.onreadystatechange = function() {
+    //-       var rs = this.readyState;
+    //-       if (d || rs && rs != 'complete' && rs != 'loaded') return;
+    //-       d = true;
+    //-       try { Typekit.load(config); } catch (e) {}
+    //-     };
+    //-     var s = document.getElementsByTagName('script')[0];
+    //-     s.parentNode.insertBefore(tk, s);
+    //-   })();
+  body
+    aside.aside-nav
+      header.header-main
+        h1.header-logo Talllies
+      nav(ng-controller="NavCtrl").nav
+        ul
+          a(href="/")
+            li(ng-class="{'is-active': path === '/'}")
+              i.fa.fa-clock-o
+              | Timers
+          a(href="/projects")
+            li(ng-class="{'is-active': path === '/projects'}")
+              i.fa.fa-copy
+              | Projects
+          a(href="/reports")
+            li(ng-class="{'is-active': path === '/reports'}")
+              i.fa.fa-copy
+              | Reports
+          a(href="/logout", target="_self").nav-signout
+            li
+              img(src="#{avatar}")
+              | #{username}
+              | Signout
+        //- if username
+        //-   ul.nav.navbar-nav.navbar-right
+        //-     li
+        //-       a(href="/logout", target="_self") Logout
+        //-     li
+        //-       | Logged in as: 
+        //-       img(src="/uploads/#{avatar}")
+        //-       | #{username}
 
-block body
+
+    .content-wrapper(ng-class="{'nav-open': navOpen}")
+      section.content
+        //- pre Model: {{timer | json}}
+        header(ng-controller="TimerCtrl").header-timer
+          timer-widget
+
+        div(ng-view).container
+
+      //- .container
+      //-   //- block body
+      //-   .row
+      //-     div(ng-view).col-md-10
+      //-       // App is here
+      //-     //- .col-md-2(ng-controller="OnlineCtrl")
+      //-     //-   .well.affix
+      //-     //-     h3 {{team.name}} Members Online
+      //-     //-     div(ng-repeat='user in users')
+      //-     //-       img(src="/uploads/{{team.members[user].avatar}}")
+      //-     //-       h5{{user}}
+
+    //- script(src='/js/lib/jquery-2.0.3.min.js')
+    //- script(src='/js/lib/angular-1.2.9.js')
+    //- script(src='/js/lib/angular-file-upload-shim.js')
+    //- script(src='bower_components/underscore/underscore-min.js')
+
+
+    //- script(src='/js/lib/angular-file-upload.js')
+
+    //- script(src='/socket.io/socket.io.js')
+    //- script(src='bower_components/angular-socket-io/socket.js')
+    script(src='/bower_components/angular/angular.js')
+    script(src='/bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
+    script(src='/bower_components/angular-route/angular-route.js')
+    script(src='bower_components/angular-resource/angular-resource.js')
+    script(src='/js/lib/angular-tags-0.2.10-tpls.js')
+
+
+
+
+    script(src='js/helpers.js')
+    script(src='js/app.js')
+    script(src='js/services.js')
+    //- script(src='js/controllers/project.js')
+    //- script(src='js/controllers/users.js')
+    script(src='js/controllers/timer.js')
+    script(src='js/controllers/timers.js')
+    script(src='js/controllers/projects.js')
+    script(src='js/controllers/nav.js')
+    script(src='js/directives/timer-widget.js')
+    script(src='js/directives/timer.js')
+    script(src='js/directives/project.js')
+    script(src='js/filters.js')
+    script(src='js/directives.js')
