--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,114 +1,50 @@
 doctype
-html(ng-app="myApp")
+html.landing
   head
-    meta(charset='utf8')
-    base(href='/')
-    title Molyneux
-    link(rel='stylesheet', href='/css/app.css')
-    link(rel='stylesheet', href='/css/font-awesome.css')
-    link(rel='stylesheet', href='/css/bootstrap.css')
-    link(rel='stylesheet', href='/css/main.css')
-    script.
-      var user = '#{userId}'
-    script(type="text/javascript", src="//use.typekit.net/ocs1xrk.js")
-    script(type="text/javascript").
-      try{Typekit.load();}catch(e){}
-    //- script(type="text/javascript").
-    //-   (function() {
-    //-     var config = {
-    //-       kitId: 'ocs1xrk'
-    //-     };
-    //-     var d = false;
-    //-     var tk = document.createElement('script');
-    //-     tk.src = '//use.typekit.net/' + config.kitId + '.js';
-    //-     tk.type = 'text/javascript';
-    //-     tk.async = 'true';
-    //-     tk.onload = tk.onreadystatechange = function() {
-    //-       var rs = this.readyState;
-    //-       if (d || rs && rs != 'complete' && rs != 'loaded') return;
-    //-       d = true;
-    //-       try { Typekit.load(config); } catch (e) {}
-    //-     };
-    //-     var s = document.getElementsByTagName('script')[0];
-    //-     s.parentNode.insertBefore(tk, s);
-    //-   })();
+  title.js-title Talllies - Time Tracking for teams
+
+  meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0')
+  meta(name="description", content="Talllies - Time Tracking")
+
+  meta(property="og:url", content="http://tallli.es/")
+  meta(property="og:title", content="Talllies - Time Tracking")
+  meta(property="og:description", content="Feature based Time Tracking")
+
+  meta(name="twitter:card", content="summary")
+  meta(name="twitter:url", content="http://tallli.es/")
+  meta(name="twitter:title", content="Talllies - Time Tracking")
+
+  //- link(rel='shortcut icon', type='image/x-icon', href='/favicon.ico')
+  //- link(rel="apple-touch-icon-precomposed", sizes="57x57", href="/imgs/apple-touch-icon-57x57-precomposed.png")
+  //- link(rel="apple-touch-icon-precomposed", sizes="72x72", href="/imgs/apple-touch-icon-72x72-precomposed.png")
+  //- link(rel="apple-touch-icon-precomposed", sizes="114x114", href="/imgs/apple-touch-icon-114x114-precomposed.png")
+  //- link(rel="apple-touch-icon-precomposed", sizes="144x144", href="/imgs/apple-touch-icon-144x144-precomposed.png")
+
+  link(rel="stylesheet", href='/css/font-awesome.min.css')
+  link(rel="stylesheet", href='/css/home.css')
+
+  script(src="/js/vendor/modernizr.js")
+
+  script(type="text/javascript", src="//use.typekit.net/crh6ubw.js")
+  script.
+    try{Typekit.load();}catch(e){}
+
   body
-    aside.aside-nav
-      header.header-main
-        h1.header-logo Talllies
-      nav(ng-controller="NavCtrl").nav
-        ul
-          a(href="/")
-            li(ng-class="{'is-active': path === '/'}")
-              i.fa.fa-clock-o
-              | Timers
-          a(href="/projects")
-            li(ng-class="{'is-active': path === '/projects'}")
-              i.fa.fa-copy
-              | Projects
-          a(href="/logout", target="_self")
-            li
-              | Signout
-        //- if username
-        //-   ul.nav.navbar-nav.navbar-right
-        //-     li
-        //-       a(href="/logout", target="_self") Logout
-        //-     li
-        //-       | Logged in as: 
-        //-       img(src="/uploads/#{avatar}")
-        //-       | #{username}
+    block content
 
-
-    .content-wrapper(ng-class="{'nav-open': navOpen}")
-      section.content
-        //- pre Model: {{timer | json}}
-        header(ng-controller="TimerCtrl").header-timer
-          timer-widget
-
-        div(ng-view).container
-
-      //- .container
-      //-   //- block body
-      //-   .row
-      //-     div(ng-view).col-md-10
-      //-       // App is here
-      //-     //- .col-md-2(ng-controller="OnlineCtrl")
-      //-     //-   .well.affix
-      //-     //-     h3 {{team.name}} Members Online
-      //-     //-     div(ng-repeat='user in users')
-      //-     //-       img(src="/uploads/{{team.members[user].avatar}}")
-      //-     //-       h5{{user}}
-
-    //- script(src='/js/lib/jquery-2.0.3.min.js')
-    //- script(src='/js/lib/angular-1.2.9.js')
-    //- script(src='/js/lib/angular-file-upload-shim.js')
-    //- script(src='bower_components/underscore/underscore-min.js')
-
-
-    //- script(src='/js/lib/angular-file-upload.js')
-
-    //- script(src='/socket.io/socket.io.js')
-    //- script(src='bower_components/angular-socket-io/socket.js')
-    script(src='/bower_components/angular/angular.js')
-    script(src='/bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
-    script(src='/bower_components/angular-route/angular-route.js')
-    script(src='bower_components/angular-resource/angular-resource.js')
-    script(src='/js/lib/angular-tags-0.2.10-tpls.js')
-
-
-
-
-    script(src='js/helpers.js')
-    script(src='js/app.js')
-    script(src='js/services.js')
-    //- script(src='js/controllers/project.js')
-    //- script(src='js/controllers/users.js')
-    script(src='js/controllers/timer.js')
-    script(src='js/controllers/timers.js')
-    script(src='js/controllers/projects.js')
-    script(src='js/controllers/nav.js')
-    script(src='js/directives/timer-widget.js')
-    script(src='js/directives/timer.js')
-    script(src='js/directives/project.js')
-    script(src='js/filters.js')
-    script(src='js/directives.js')
+  block scripts
+    script(src="/js/vendor/jquery-2.0.3.js")
+    script.
+      (function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+      typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
+      b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+      mixpanel.init("#{mixpanel}")
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-40695334-1')
+    script.
+      window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+      d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+      _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+      $.src='//v2.zopim.com/?1YGLKUggBh70rSD29AzXGKsl07P6ivmB';z.t=+new Date;$.
+      type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
